--- a/getting-started-master/app/src/static/index.html
+++ b/getting-started-master/app/src/static/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome/all.min.css" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Todo App</title>
+    <title>Kamilas Chore List</title>
 </head>
 <body>
     <div id="root"></div>
@@ -17,5 +17,6 @@
     <script src="js/react-bootstrap.js"></script>
     <script src="js/babel.min.js"></script>
     <script type="text/babel" src="js/app.js"></script>
+    <img src="css/img/dogs1.jpg" alt="dog pic ">
 </body>
 </html>
