--- a/getting-started-master/app/src/static/index.html
+++ b/getting-started-master/app/src/static/index.html
@@ -17,6 +17,10 @@
     <script src="js/react-bootstrap.js"></script>
     <script src="js/babel.min.js"></script>
     <script type="text/babel" src="js/app.js"></script>
-    <img src="css/img/dogs1.jpg" alt="dog pic ">
+
+    <div id="image" >
+        <img src="css/img/dogs1.jpg" alt="dog pic ">
+    </div>
+
 </body>
 </html>
