--- a/getting-started-master/app/src/static/index.html
+++ b/getting-started-master/app/src/static/index.html
@@ -20,6 +20,7 @@
 
     <div id="image" >
         <img src="css/img/dogs1.jpg" alt="dog pic ">
+        <img src="css/img/dogs2.jpg" alt="dog pic ">
     </div>
 
 </body>
