--- a/getting-started-master/app/src/static/index.html
+++ b/getting-started-master/app/src/static/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/font-awesome/all.min.css" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Kamilas Chore List</title>
+    <title>NTD</title>
 </head>
 <body>
+    <h2>Name The Dawg</h2>
     <div id="root"></div>
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
@@ -20,7 +21,6 @@
 
     <div id="image" >
         <img src="css/img/dogs1.jpg" alt="dog pic ">
-        <img src="css/img/dogs2.jpg" alt="dog pic ">
     </div>
 
 </body>
